...
                            Section {
                                Button(action: {
                                    habitToEdit = habit
                                }) {
                                    Label("General.Buttons.Edit", systemImage: "pencil")
                                }
                                .accessibilityIdentifier("MenuEditButton")
                            }
                            
                            Section {
                                Button {
                                    withAnimation {
                                        if habit.habitArchived {
...
                                }
                            }
                        } label: {
                            Image(systemName: "ellipsis.circle")
                        }
                        .accessibilityLabel("DetailView.Accessibility.Menu")
                        .accessibilityIdentifier("DetailMenu")
                    }
                })
                .ignoresSafeArea(.keyboard)
                .zIndex(1)
                .disabled(viewModel.multipleAddShown || quickAddViewShown)
                .blur(radius: viewModel.multipleAddShown || quickAddViewShown ? 10 : 0)
...
                )
                .frame(height: 50)
                .hoverEffect(.lift)
                .padding()
        }
        .buttonStyle(.plain)
        .accessibilityLabel("Graphs")
        .accessibilityIdentifier("GraphsButton")
    }
    
    @ViewBuilder var calendarViewButton: some View {
        Button {
            showCalendarSheet = true
        } label: {
...
