...
"General.ResetIntervals.Weekly" = "Weekly";
"General.ResetIntervals.Monthly" = "Monthly";
"General.ResetIntervals.Daily.Noun" = "Day";
"General.ResetIntervals.Weekly.Noun" = "Week";
"General.ResetIntervals.Monthly.Noun" = "Month";

"General.ListFilterSelection.All" = "All Habits";
"General.ListFilterSelection.Daily" = "Daily Habits";
"General.ListFilterSelection.Weekly" = "Weekly Habits";
"General.ListFilterSelection.Monthly" = "Monthly Habits";

"General.BuildOrBreak.BuildHabit" = "Build Habit";
"General.BuildOrBreak.BreakHabit" = "Break Habit";
...

"Settings.InterfaceDesign.AccentTheme" = "Accent Color & Theme";
"Settings.InterfaceDesign.AccentTheme.ColorPicker" = "Select your preffered Color";

"Settings.InterfaceDesign.AccentTheme.ThemePicker" = "Select a Theme";
"Settings.InterfaceDesign.AccentTheme.ThemePicker.Light" = "Light Mode";
"Settings.InterfaceDesign.AccentTheme.ThemePicker.Dark" = "Dark Mode";
"Settings.InterfaceDesign.AccentTheme.ThemePicker.Automatic" = "Automatic";

"Settings.InterfaceDesign.ListCellColor" = "List Cell Color";
"Settings.InterfaceDesign.ListCellColor.Colorful" = "Colorful";
"Settings.InterfaceDesign.ListCellColor.Muted" = "Muted";
"Settings.InterfaceDesign.AppIcon" = "App Icon";
"Settings.InterfaceDesign.HandPreference" = "Hand Preference";
...
