...
class UserSettings: ObservableObject {
    let accentColorNames: [String] = [
        "Persistent",
        "Fire",
        "Rose",
        "Violet",
        "Waves",
        "Deep Sea",
        "Grass",
        "Sun"
    ]
    
    enum ThemeSelectionEnum: String, CaseIterable, Hashable {
...
